# TestAndroidApp

./: .gitignore  CMakeLists.txt  README.md  build-debug-android-windows.ps1  build-debug-win64-windows.ps1  build.gradle  debugger-android-windows.ps1  install-debug-android-windows.ps1  run-debug-win64-windows.ps1  settings.gradle
src/: asset_loader.cpp  asset_loader.h  main.cpp
src/main/: AndroidManifest.xml
src/main/assets/: print.txt
